--- a/Landlord Credit Check/index.html
+++ b/Landlord Credit Check/index.html
@@ -40,7 +40,7 @@
 	<nav class="clear">
 	<div class="floatleft">
 	<ul class="moveme">
-		<li class="margintop"><a href="tenantcreditreport.html">Tenant Credit</a></li>
+		<li class="margintop"><a href="html/tenantcreditreport.html">Tenant Credit</a></li>
 		<li><a href="html/tenantcriminalreport.html">Tenant Criminal</a></li>
 		<li><a href="html/tenantevictionsearch.html">Tenant Eviction</a></li>
 		<li><a href="html/landlordrentalapplications.html">Landlord Applications</a></li>
