on-site inspection page created

--- a/Landlord Credit Check/html/onsite-inspection.html
+++ b/Landlord Credit Check/html/onsite-inspection.html
@@ -53,17 +53,19 @@
 	</div>
 	</nav>
 </header>
-<div  class="clear">
-<!---- content goes here need to float left and remove clear add clear before next float below ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
+<div  class="floatleft">
+<h1 class="headerspace">*On-Site Inspection</h1>
+<p class="onsiteparagraph">An On-Site Inspection is when a third party company, approved by the Credit Bureaus, comes to take pictures of where you receive your reports.  This is done to ensure the proper handling of consumer’s information. 
+
+On-Site inspections are mandatory by law in order to run and receive full consumer credit reports.
+
+Having an On-Site inspection will give you Gold Member access.  To complete this process give us a call at 512 285 6078.</p>
+<p class="onsiteparagraph">We offer all on-site inspections free to our members.</p>
+<div id="becomelink">
+<p class="onsiteparagraph"><a href="becomeamember.html">Sign up here!</a></p>
+</div>
+</div>
+<div class="clear">
 </div>
 <div id="center" class="floatleft">
 <h2>Join our Mailing List</h2>
