--- a/Landlord Credit Check/index.html
+++ b/Landlord Credit Check/index.html
@@ -61,7 +61,7 @@
 	<table>
 		<thead>
 			<tr>
-				<th scope="col" class="spacing">Tenant Screening Pricing</th>
+				<th scope="col" class="spacing"><a href="html/pricelist.html">Tenant Screening Pricing</a></th>
 			</tr>
 		</thead>
 		<tbody>
