faq page created
items listed in faq debating on creating a clicking link list for the
faq

--- a/Landlord Credit Check/html/FAQ.html
+++ b/Landlord Credit Check/html/FAQ.html
@@ -53,17 +53,82 @@
 	</div>
 	</nav>
 </header>
-<div  class="clear">
+<div id="faqspacing" class="floatleft">
 <!---- content goes here need to float left and remove clear add clear before next float below ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
+<h1>FAQ</h1>
+<h2>Do I have to become a member with Accurate Credit Bureau to screen my potential tenants?</h2>
+	<ul>
+		<li>Yes.  To obtain credit information, you must become a member.</li>
+		<li>We offer a few packages such as Criminal Reports, and Eviction records that do not require membership.</li>
+		<li>Membership is FREE and there are no set-up costs.</li>
+		<li>Click <a href="becomeamember.html">Here</a> to sign up.</li>
+	</ul> 
+	<br>
+	<h2>How do I become a member?</h2>
+	<ul>
+		<li>Click <a href="becomeamember.html">Here</a> to sign up.</li>
+		<li>Or click on "Become A Member" on the link bar.</li>
+		<li>Download the correct application.  Ie. Landlord, Property Management, Realtor.</li>
+	</ul>
+	<h2>I’m already a member. What do I need to submit with my credit check request?</h2>
+	<ul>
+		<li>A completed Order Form</li>
+		<li>Signed Applicant Disclosure Form (or Rental Application)</li>
+		<li>A Photocopy of the Applicants Driver's License (or Government-Issued Photo ID)</li>
+	</ul>
+	<h2>Are there any other fees associated with your service?</h2>
+	<ul>
+		<li>Membership is free. There are no set-up costs or membership dues.</li>
+	</ul>
+	<h2>Are there any other fees associated with your service?</h2>
+	<ul>No.  Packages are priced per applicant.</ul>
+	<h2>Do married couples count as one packages?</h2>
+	<ul>
+		<li>No, married couples are priced as two individuals.</li>
+	</ul>
+	<h2>What can I order if I do not wish to become a member?</h2>
+	<ul>
+		<li>Criminal Background Checks</li>
+		<li>DMV Driving Records</li>
+		<li>Evictions, Suits, Liens, and Judgments Search</li>
+		<li>Bankruptcy Search</li>
+		<li>SSN Verification Report</li>
+		<li>Enhanced People Search</li>
+	</ul>
+	<h2>Can I email a credit check request?</h2>
+	<ul>
+		<li>Yes they can be emailed to<a href="mailto:info@accuratecredit.com" class="hlinks_links"> info@accuratecredit.com</a></li>
+	</ul>
+	<h2>Where is Accurate Credit Bureau located?</h2>
+	<ul>
+		<li>We are located in Bastrop, TX, a small town outside of Austin.</li>
+	</ul>
+	<h2>Can you provide credit reports for applicants in any state?</h2>
+	<ul>
+		<li>Yes. Our services are nationwide, including Puerto Rico and the USVI.</li>
+	</ul>
+	<h2>What if my applicant does not have a Social Security Number? Can I still screen him/her?</h2>
+	<ul>
+		<li>We are able to provide Criminal Background Searches as well as Eviction Searches for applicants that do not have a Social Security Number.</li>
+	</ul>
+	<h2>Will I get the FULL consumer credit report?</h2>
+	<ul>
+		<li>FULL consumer credit reports can only be obtained after an On-Site Inspection.</li>
+		<li>This is mandated by law and is require by all background screening agencies.</li>
+		<li>Click<a href="onsite-inspection.html">Here</a> for more information about an on-site inspection.</li>
+	</ul>
+	<h2>What credit information will be provided on the credit check?</h2>
+	<ul>
+		<li>Bankruptcies</li>
+		<li>Collections</li>
+		<li>Judgements</li>
+		<li>Foreclosures</li>
+		<li>Total Number of Accounts</li>
+		<li>Total Number of Current Accounts</li>
+		<li>Applicant's FICO Score (with on-site inspection)</li>
+	</ul>
+</div>
+<div class="clear">
 </div>
 <div id="center" class="floatleft">
 <h2>Join our Mailing List</h2>
