updated price list

--- a/Landlord Credit Check/html/pricelist.html
+++ b/Landlord Credit Check/html/pricelist.html
@@ -53,17 +53,68 @@
 	</div>
 	</nav>
 </header>
-<div  class="clear">
-<!---- content goes here need to float left and remove clear add clear before next float below ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
+<div  class="floatleft">
+	<div id="tablepricelist">
+	<table>
+		<thead>
+			<tr>
+				<td scope="col" class="bottomborder"><strong>Price List</strong></td>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td class="underline">SINGLE BUREAU TENANT CREDIT CHECK*</td>
+			</tr>
+			<tr>
+				<td>Tenant Credit check and analysis includes Judgments, Liens, Bankruptcies, and Foreclosures.</td>
+			</tr>
+			<tr>
+				<td class="underline">$29.95 LANDLORD PREFERRED</td>
+			</tr>
+			<tr>
+				<td>Credit check and Background Bureau which includes Last 15 years of Public Records including Property, Landlord Information, and Evictions. Returned to you by fax or email within minutes.</td>
+			</tr>
+			<tr>
+				<td class="underline">$39.95 LANDLORD COMPREHENSIVE</td>
+			</tr>
+			<tr>
+				<td>Credit check and Comprehensive Background Bureau which includes an Online Criminal Record check, Last 15 years of Public Records including Property, Landlord Information, and Evictions.</td>
+			</tr>
+			<tr>
+				<td class="underline">$60.00 LANDLORD COMPLETE</td>
+			</tr>
+			<tr>
+				<td>Landlord Comprehensive plus additional Comprehensive Criminal Records which includes FBI most wanted, Terrorist, and Sexual offender database check, Evictions.</td>
+			</tr>
+			<tr>
+				<td class="underline">$22.50 COMPREHENSIVE BACKGROUND BUREAU</td>
+			</tr>
+			<tr>
+				<td>Includes Online Criminal Records Database Check, Last 15 years of Public Records including Property, Landlord Information, and Bankruptcies, Evictions.</td>
+			</tr>
+			<tr>
+				<td class="underline">$11.95 NATIONAL EVICTION REPORTS</td>
+			</tr>
+			<tr>
+				<td>Returned to you by fax or email within 30 minutes.</td>
+			</tr>
+			<tr>
+				<td class="underline">$25.00 COUNTY CRIMINAL RECORDS **</td>
+			</tr>
+			<tr>
+				<td>Return time varies depending on the county it has been requested from. Usually 2-5 business days.</td>
+			</tr>
+			<tr>
+				<td class="underline">$27.50 STATE CRIMINAL REPORT **</td>
+			</tr>
+			<tr>
+				<td>Return time varies depending on the state(s) it has been requested from; 28 states are instant, the rest and territories usually take 2-5 business days.</td>
+			</tr> 
+		</tbody>
+	</table>
+	</div>
+</div>
+<div class="clear">
 </div>
 <div id="center" class="floatleft">
 <h2>Join our Mailing List</h2>
