--- a/Landlord Credit Check/html/becomeamember.html
+++ b/Landlord Credit Check/html/becomeamember.html
@@ -53,17 +53,23 @@
 	</div>
 	</nav>
 </header>
-<div  class="clear">
+<div  class="floatleft">
 <!---- content goes here need to float left and remove clear add clear before next float below ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
+<div class="spacingforhtml">
+<h1>Become a Member</h1>
+<br>
+<br>
+<h2>Three steps to sign up!</h2>
+	<ol>
+		<li>Fill out the application online, or download and fill out by hand.</li>
+		<li>Submit your supporting documents: picture ID, proof of ownership, and signed letter of intent.</li>
+		<li>Receive and email with your client ID number.</li>
+	</ol> 
+	<br>
+<h2>Client Applications</h2>
+</div>
+</div>
+<div class="clear">
 </div>
 <div id="center" class="floatleft">
 <h2>Join our Mailing List</h2>
