become a member created
links done page done

--- a/Landlord Credit Check/html/becomeamember.html
+++ b/Landlord Credit Check/html/becomeamember.html
@@ -66,7 +66,36 @@
 		<li>Receive and email with your client ID number.</li>
 	</ol> 
 	<br>
-<h2>Client Applications</h2>
+</div>
+<div id="membertable">
+<table>
+<thead>
+	<tr>
+		<th scope="col">Client Applications</th>
+		<th scope="col">Word Document</th>
+		<th scope="col">PDF Document</th>
+	</tr>
+</thead>
+<tbody>
+	<tr>
+		<td>Landlord Client App</td>
+		<td><a href="../documents/landapp.doc">Landlord Word</a></td>
+		<td><a href="../documents/landapp.pdf">Landlord PDF</a></td>
+	</tr>
+	<tr>
+		<td>Real Estate Client App</td>
+		<td><a href="../documents/realapp.doc">Real Estate Word</a></td>
+		<td><a href="../documents/realapp.pdf">Real Estate PDF</a></td>
+	</tr>
+	<tr>
+		<td>Property Management App</td>
+		<td><a href="../documents/propapp.doc">Management Word</a></td>
+		<td><a href="../documents/propapp.pdf">Management PDF</a></td>
+	</tr>
+</tbody>
+<tfoot>
+</tfoot>
+</table>
 </div>
 </div>
 <div class="clear">
