contact page created forms finished need php/java

--- a/Landlord Credit Check/html/becomeamember.html
+++ b/Landlord Credit Check/html/becomeamember.html
@@ -63,7 +63,7 @@
 	<ol>
 		<li>Fill out the application online, or download and fill out by hand.</li>
 		<li>Submit your supporting documents: picture ID, proof of ownership, and signed letter of intent.</li>
-		<li>Receive and email with your client ID number.</li>
+		<li>Receive an email with your client ID number.</li>
 	</ol> 
 	<br>
 </div>
