landlord application page styled content added

--- a/Landlord Credit Check/html/landlordrentalapplications.html
+++ b/Landlord Credit Check/html/landlordrentalapplications.html
@@ -53,17 +53,64 @@
 	</div>
 	</nav>
 </header>
-<div  class="clear">
+<div  class="floatleft">
 <!---- content goes here need to float left and remove clear add clear before next float below ---->
+<div id="applicationtable">
+<table>
+<thead>
+	<tr>
+		<th scope="col"><strong>Landlord Rental Applications</strong></th>
+		<th scope="col">Word Document</th>
+		<th scope="col">PDF Document</th>
+	</tr>
+</thead>
+<tbody>
+	<tr>
+		<td>Order Form</td>
+		<td><a href="../documents/">Order Form Word</a></td>
+		<td><a href="../documents/">Order Form  PDF</a></td>
+	</tr>
+	<tr>
+		<td class="tablebackground">Rental Application</td>
+		<td class="tablebackground"><a href="../documents/">Rental App Word</a></td>
+		<td class="tablebackground"><a href="../documents/">Rental App PDF</a></td>
+	</tr>
+	<tr>
+		<td>Married Rental Application</td>
+		<td><a href="../documents/">Married Rental Word</a></td>
+		<td><a href="../documents/">Married Rental PDF</a></td>
+	</tr>
+	<tr>
+		<td class="tablebackground">Applicant Consent Form</td>
+		<td class="tablebackground"><a href="../documents/">Consent Form Word</a></td>
+		<td class="tablebackground"><a href="../documents/">Consent Form PDF</a></td>
+	</tr>
+	<tr>
+		<td>Lease Agrement</td>
+		<td><a href="../documents/">Lease Word</a></td>
+		<td><a href="../documents/">Lease Rental PDF</a></td>
+	</tr>
+	<tr>
+		<td class="tablebackground">Property Management Agrement</td>
+		<td class="tablebackground"><a href="../documents/">Prop Agrement Word</a></td>
+		<td class="tablebackground"><a href="../documents/">Prop Agrement PDF</a></td>
+	</tr>
+	<tr>
+		<td>Denial Letter</td>
+		<td><a href="../documents/">Applicant Denial Word</a></td>
+		<td><a href="../documents/">Applicant Denial PDF</a></td>
+	</tr>
+</tbody>
+<tfoot>
+	<tr>
+		<td colspan="2" class="smalltext">Everything needed to process a report is in the order form download!</td>
+	</tr>
+</tfoot>
+</table>
+</div>
 <!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
+</div>
+<div class="clear">
 </div>
 <div id="center" class="floatleft">
 <h2>Join our Mailing List</h2>
