--- a/Landlord Credit Check/Landlord Credit Check/html/tenantcredit.html
+++ b/Landlord Credit Check/Landlord Credit Check/html/tenantcredit.html
@@ -53,17 +53,53 @@
 	</div>
 	</nav>
 </header>
-<div  class="clear">
+<div  class="floatleft">
 <!---- content goes here need to float left and remove clear add clear before next float below ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
+<div id="tencredittable">
+<table>
+	<thead>
+		<tr>
+			<th scope="col">Benefit With Credit</th>
+			<th scope="col"></th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<td>Know current debt</td>
+			<td class="borderleft">&#10003</td>
+		</tr>
+		<tr class="tablebackground">
+			<td>Find Judgments</td>
+			<td class="borderleft">&#10003</td>
+		</tr>
+		<tr>
+			<td>Find Collections</td>
+			<td class="borderleft">&#10003</td>
+		</tr>
+		<tr class="tablebackground">
+			<td>Find Bankruptcies</td>
+			<td class="borderleft">&#10003</td>
+		</tr>
+		<tr>
+			<td>Find Liens</td>
+			<td class="borderleft">&#10003</td>
+		</tr>
+		<tr class="tablebackground">
+			<td>Find Forclosures</td>
+			<td class="borderleft">&#10003</td>
+		</tr>
+		<tr>
+			<td>Know Total & Current Accounts</td>
+			<td class="borderleft">&#10003</td>
+		</tr>
+	</tbody>
+	<tfoot>
+	</tfoot>
+</table>
+</div>
+<h2 class="indentleft">Don't go through the eviction process and save yourself time and money today!</h2>
+</div>
+<div class="clear">
 </div>
 <div id="center" class="floatleft">
 <h2>Join our Mailing List</h2>
