--- a/Landlord Credit Check/Landlord Credit Check/html/tenantcreditreport.html
+++ b/Landlord Credit Check/Landlord Credit Check/html/tenantcreditreport.html
@@ -53,17 +53,22 @@
 	</div>
 	</nav>
 </header>
-<div  class="clear">
-<!---- content goes here need to float left and remove clear add clear before next float below ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
+<div  class="floatleft">
+<div id="tencreditreportpage">
+<h2>Why We Need To Screen Tenants in the First Place</h2>
+
+<p>Why do we need to screen rental property applicants anyway? You are a good judge of character right? Probably but you’d hate to be wrong.</p>
+
+<P>We need to screen tenants because these folks are going live in your rentals. Our goal as landlords is to have a profitable rental units and have those units rented by individuals or families that are going to aide in that goal. Reagan said it best, “Trust but verify”. Your goal during your tenant screening efforts is to lower your risk and place great tenants in your properties. They will be living there after all. Once they move in, they will be there for a few months at the least even if they don’t pay you another dime. The only way to get out a tenant that won’t leave on their own is to file for and be awarded an eviction through the Courts. This legal process takes time and is big hassle.</P>
+
+<h2>What is <strong>Tenant Screening</strong></h2>
+
+<p>Tenant screening exists to qualify rental property applicants. By qualify I mean determining if they can afford to pay their rent, their lifestyle will mesh with the neighborhood and what you would expect from the tenants you want to occupy your rental properties, and whether you find these applicants to be credible and worth of occupying your unit.</p>
+
+<p>There are several different ways to screen tenants Accurate Credit Bureau provides several tenant background screening packages starting as low as $19.95. Important Decisions Demand Accurate Credit!</p>
+</div>
+</div>
+<div class="clear">
 </div>
 <div id="center" class="floatleft">
 <h2>Join our Mailing List</h2>
