--- a/Landlord Credit Check/Landlord Credit Check/html/tenantcriminalreport.html
+++ b/Landlord Credit Check/Landlord Credit Check/html/tenantcriminalreport.html
@@ -53,17 +53,30 @@
 	</div>
 	</nav>
 </header>
-<div  class="clear">
-<!---- content goes here need to float left and remove clear add clear before next float below ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
+<div  class="floatleft">
+<div class="spacingforhtml">
+<h2>Accurate Criminal Record Reports</h2>
+<p>Simply, a criminal record―or rap sheet― is a record of a person’s criminal history, such as the crimes a person has committed. Often, a criminal record is a compilation of local, state, and federal criminal information on a person.</p>
+<p>Criminal records can include every detail of a person’s criminal past including everything from misdemeanors and felonies to pending charges and even acquitted charges. Often this depends on geographic location and the agency responsible for the record.</p>
+<p>Generally, criminal records don’t include expunged convictions.</p>
+<h2>Using Criminal Records</h2>
+<p>From the DMV to the United States military, various agencies and organizations request criminal records for many reasons.</p>
+<p>Common uses for criminal records include:</p>
+	<ul>
+		<li><strong>Tenant Criminal</strong></li>
+		<li>Employment</li>
+		<li>School Admittance</li>
+		<li>Military Service</li>
+		<li>Security Clearance</li>
+		<li>Buying a Firearm</li>
+		<li>Fostering or Adopting Children</li>
+		<li>Visa's</li>
+		<li>Law Enforcement Purposes</li>
+	</ul>
+<p>Of course, you might want a copy of your criminal record for your own purposes.</p>
+</div>
+</div>
+<div class="clear">
 </div>
 <div id="center" class="floatleft">
 <h2>Join our Mailing List</h2>
