--- a/Landlord Credit Check/Landlord Credit Check/html/landlordpreferred.html
+++ b/Landlord Credit Check/Landlord Credit Check/html/landlordpreferred.html
@@ -53,17 +53,96 @@
 	</div>
 	</nav>
 </header>
-<div  class="clear">
-<!---- content goes here need to float left and remove clear add clear before next float below ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
+<div  class="floatleft">
+<div id="comparisontable">
+<table>
+	<thead>
+		<tr>
+			<th scope="col"></th>
+			<th scope="col">Tenant Credit Report</th>
+			<th scope="col">Landlord Preferred</th>
+			<th scope="col">Landlord Comprehensive</th>
+			<th scope="col">Comprehensive Background</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<td>Credit Check</td>
+			<td class="borderleft">&#10003</td>
+			<td class="borderleft">&#10003</td>
+			<td class="borderleft">&#10003</td>
+			<td class="borderleft"></td>
+		</tr>
+		<tr class="tablebackground">
+			<td>Prior Names</td>
+			<td class="borderleft">&#10003</td>
+			<td class="borderleft">&#10003</td>
+			<td class="borderleft">&#10003</td>
+			<td class="borderleft">&#10003</td>
+		</tr>
+		<tr>
+			<td>Prior Addresses</td>
+			<td class="borderleft">&#10003</td>
+			<td class="borderleft">&#10003</td>
+			<td class="borderleft">&#10003</td>
+			<td class="borderleft">&#10003</td>
+		</tr>
+		<tr class="tablebackground">
+			<td>Bankruptcies</td>
+			<td class="borderleft">&#10003</td>
+			<td class="borderleft">&#10003</td>
+			<td class="borderleft">&#10003</td>
+			<td class="borderleft"></td>
+		</tr>
+		<tr>
+			<td>Liens</td>
+			<td class="borderleft">&#10003</td>
+			<td class="borderleft">&#10003</td>
+			<td class="borderleft">&#10003</td>
+			<td class="borderleft"></td>
+		</tr>
+		<tr class="tablebackground">
+			<td>Forclosures</td>
+			<td class="borderleft">&#10003</td>
+			<td class="borderleft">&#10003</td>
+			<td class="borderleft">&#10003</td>
+			<td class="borderleft"></td>
+		</tr>
+		<tr>
+			<td>Know Total & Current Accounts</td>
+			<td class="borderleft">&#10003</td>
+			<td class="borderleft">&#10003</td>
+			<td class="borderleft">&#10003</td>
+			<td class="borderleft"></td>
+		</tr>
+		<tr class="tablebackground">
+			<td>Evictions</td>
+			<td class="borderleft"></td>
+			<td class="borderleft">&#10003</td>
+			<td class="borderleft">&#10003</td>
+			<td class="borderleft">&#10003</td>
+		</tr>
+		<tr>
+			<td>National Criminal</td>
+			<td class="borderleft"></td>
+			<td class="borderleft">&#10003</td>
+			<td class="borderleft">&#10003</td>
+			<td class="borderleft">&#10003</td>
+		</tr>
+		<tr>
+			<td>Price</td>
+			<td class="borderleft">$19.95</td>
+			<td class="borderleft">$29.95</td>
+			<td class="borderleft">$39.95</td>
+			<td class="borderleft">$22.50</td>
+		</tr>
+	</tbody>
+	<tfoot>
+	</tfoot>
+</table>
+</div>
+</div>
+<div class="clear">
 </div>
 <div id="center" class="floatleft">
 <h2>Join our Mailing List</h2>
