--- a/Landlord Credit Check/Landlord Credit Check/html/landlordrentalapplications.html
+++ b/Landlord Credit Check/Landlord Credit Check/html/landlordrentalapplications.html
@@ -53,17 +53,62 @@
 	</div>
 	</nav>
 </header>
-<div  class="clear">
-<!---- content goes here need to float left and remove clear add clear before next float below ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
-<!---- content goes here ---->
+<div  class="floatleft">
+<div id="applicationtable">
+<table>
+<thead>
+	<tr>
+		<th scope="col"><strong>Landlord Rental Applications</strong></th>
+		<th scope="col">Word Document</th>
+		<th scope="col">PDF Document</th>
+	</tr>
+</thead>
+<tbody>
+	<tr>
+		<td>Order Form</td>
+		<td><a href="../documents/orderform.doc">Order Form Word</a></td>
+		<td><a href="../documents/orderform.pdf">Order Form  PDF</a></td>
+	</tr>
+	<tr>
+		<td class="tablebackground">Rental Application</td>
+		<td class="tablebackground"><a href="../documents/rentalapp.doc">Rental App Word</a></td>
+		<td class="tablebackground"><a href="../documents/rentalapp.pdf">Rental App PDF</a></td>
+	</tr>
+	<tr>
+		<td>Married Rental Application</td>
+		<td><a href="../documents/rentalmar.doc">Married Rental Word</a></td>
+		<td><a href="../documents/rentalmar.pdf">Married Rental PDF</a></td>
+	</tr>
+	<tr>
+		<td class="tablebackground">Applicant Consent Form</td>
+		<td class="tablebackground"><a href="../documents/consentform.doc">Consent Form Word</a></td>
+		<td class="tablebackground"><a href="../documents/consentform1.pdf">Consent Form PDF</a></td>
+	</tr>
+	<tr>
+		<td>Lease Agrement</td>
+		<td><a href="../documents/lease.doc">Lease Word</a></td>
+		<td><a href="../documents/lease.pdf">Lease Rental PDF</a></td>
+	</tr>
+	<tr>
+		<td class="tablebackground">Property Management Agrement</td>
+		<td class="tablebackground"><a href="../documents/propagreement.doc">Prop Agreement Word</a></td>
+		<td class="tablebackground"><a href="../documents/propagreement.pdf">Prop Agreement PDF</a></td>
+	</tr>
+	<tr>
+		<td>Denial Letter</td>
+		<td><a href="../documents/denialletter.doc">Applicant Denial Word</a></td>
+		<td><a href="../documents/denialletter.pdf">Applicant Denial PDF</a></td>
+	</tr>
+</tbody>
+<tfoot>
+	<tr>
+		<td colspan="3" class="smalltext">Everything needed to process a report is in the order form download!</td>
+	</tr>
+</tfoot>
+</table>
+</div>
+</div>
+<div class="clear">
 </div>
 <div id="center" class="floatleft">
 <h2>Join our Mailing List</h2>
