finished for the most part

--- a/Landlord Credit Check/Landlord Credit Check/html/comprehensivebackgroundcheck.html
+++ b/Landlord Credit Check/Landlord Credit Check/html/comprehensivebackgroundcheck.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8"/>
 	<title>Landlord Credit Checks</title>
-	<meta name="description" content="Accurate Credit Bureau provides Credit Reports for Tenant Credit Reports, Tenant Background Checks, Tenant Screening, Tenant Criminal Reports, Tenant Driving Records, Applicant Screening, Nationwide Screning"/>
-	<meta name="keywords" content="Tenant Credit Check, Tenant Screening, Tenant Background Checks, Landlord Screening, Trans Union, Tenant Credit, Free Rental Applications, Rental Applications, Lease Agreements"/>
+	<meta name="description" content="Accurate Credit Bureau provides landlord comprehensive and tenant screening including a criminal check, sex offender search, felonies, Misdemeanors, name verificatoin, ssn verification, and eviction search"/>
+	<meta name="keywords" content="Background Check, Tenant Background Screening, Tenant Background Checks, Background Checks, Landlord Screening"/>
 	<link rel="stylesheet" href="../css/styles.css">
 	<link href='http://fonts.googleapis.com/css?family=Gentium+Book+Basic' rel='stylesheet' type='text/css'>
 </head>
