--- a/Landlord Credit Check/Landlord Credit Check/html/publicrecordreports.html
+++ b/Landlord Credit Check/Landlord Credit Check/html/publicrecordreports.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8"/>
 	<title>Landlord Credit Checks</title>
 	<meta name="description" content="Accurate Credit Bureau provides Credit Reports for Tenant Credit Reports, Tenant Background Checks, Tenant Screening, Tenant Criminal Reports, Tenant Driving Records, Applicant Screening, Nationwide Screning"/>
-	<meta name="keywords" content="Tenant Credit Check, Tenant Screening, Tenant Background Checks, Landlord Screening, Trans Union, Tenant Credit, Free Rental Applications, Rental Applications, Lease Agreements"/>
+	<meta name="keywords" content="Tenant Screening, Tenant Background Checks, Landlord Screening, Landlord Background Checks"/>
 	<link rel="stylesheet" href="../css/styles.css">
 	<link href='http://fonts.googleapis.com/css?family=Gentium+Book+Basic' rel='stylesheet' type='text/css'>
 </head>
@@ -54,10 +54,10 @@
 	</nav>
 </header>
 <div  class="floatleft">
+<h1>Order <strong>Public Records</strong> Online</h1>
 <div class="spacingforhtml">
-<h2>Criminal Records Search Order Online</h2>
-	<ul>
-		<li>Includes FBI Terrorist, Most Wanted and Sex Offender database check!</li>
+<ul>
+		<li>Receive reports back within 30 minutes!</li>
 		<li> SSN and/or DOB info is not mandatory but you will be charged an additional 
 $5.00 per ($10.00 total) if not known or left blank</li>
 		<li>Different Last names and aliases require a seperate search</li>
@@ -69,10 +69,12 @@ $5.00 per ($10.00 total) if not known or left blank</li>
 		<h2 class="indentnone">Search Type (*Required)</h2>
 		<select name="Add">
 		<option value="selectone" selected="selected">Select One</option>
-	 	<option value="county">County</option>
-	 	<option value="state">State</option>
-	 	<option value ="national">National</option>
-	 	<option value="sexoffender">Sex Offender</option>
+	 	<option value="eviction">Eviction</option>
+	 	<option value="bankruptcy">Bankruptcy</option>
+	 	<option value ="peoplesearch">Enhanced People Search</option>
+	 	<option value="businesssearch">Business Search</option>
+	 	<option value="mvr">MVR Driving Record</option>
+	 	<option value="ssnvalidation">SSN Validation</option>
 	 	</select>
 	 	<h2 class="indentnone">Applicant Information</h2>
 	 	 <label for="firstName">*First Name:</label><br>
@@ -87,8 +89,8 @@ $5.00 per ($10.00 total) if not known or left blank</li>
 	 	<input class="all" id="middle" type="text" name="middlename" placeholder="middle initial">
 	 	<br>
 	 	<br>
-	 	<label for="ssn">SSN Number:</label><br>
-	 	<input class="all" id="ssn" type="text" name="ssnnumber" placeholder="SSN Number">
+	 	<label for="ssn">*SSN Number:</label><br>
+	 	<input class="all" id="ssn" type="text" name="ssnnumber" required="required" placeholder="SSN Number">
 	 	<br>
 	 	<br>
 	 	<label for="dob">*Date Of Birth:</label><br>
