--- a/Landlord Credit Check/Landlord Credit Check/index.html
+++ b/Landlord Credit Check/Landlord Credit Check/index.html
@@ -82,9 +82,10 @@
 			<tr>
 				<td><a href="html/landlordcomprehensive.html">Landlord Comprehensive</a></td>
 				<td class="money">$39.95</td>
-				<td><a href="html/comprehensivebackgroundbureau.html">Comprehensive Background</a></td>
+				<td><a href="html/comprehensivebackgroundcheck.html">Comprehensive Background</a></td>
 				<td class="money">$22.50</td>
 			</tr>
+				<td class="movetop" colspan="3"><a href="html/publicrecordreports.html">Order Public Record Search's Online Here!</a></td>
 		</tbody>
 		<tfoot>
 			<tr>
